--- a/main.html
+++ b/main.html
@@ -8,6 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<h1>Welcome to Accio Jobs!</h1>
+	<a href=https://course.acciojob.com/modules>Blog</a>
     <script type="text/javascript" src="./script.js">
 </script>
 
