--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<h1>Welcome to Accio Jobs!</h1>
 	<a href=https://course.acciojob.com/modules>Blog</a>
+	<img src="https://cdn-imgix-open.headout.com/dynamic-remarketing/2020/4445.jpg?fm=pjpg&auto=compress&w=1200&crop=faces&fit=min"/>
     <script type="text/javascript" src="./script.js">
 </script>
 
